# django-resetdb

./: AUTHORS  ChangeLog  LICENSE  README.md  README.rst  setup.cfg  setup.py
django-resetdb/management/commands/: README.md  resetdb.py
django_resetdb/: dbops.py  resetdb.py  util.py
django_resetdb/management/commands/: createdb.py  dropdb.py  dumpdb.py  resetdb.py
