[metadata]
name = django_resetdb
author = Thomas Chamberlin
author_email = tchamber@nrao.edu
description = Management command to reset your Django database
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = http://github.com/GreenBankObservatory/django-resetdb
project-urls = 
    Source Code = http://github.com/GreenBankObservatory/django-resetdb
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Programming Language :: Python
